# rs-ecs

./: Cargo.toml  README.md
.github/workflows/: check.yaml  msrv.yaml  test.yaml
benches/: benches.rs
src/: archetype.rs  borrow_flags.rs  lib.rs  query.rs  rayon.rs  resources.rs  serde.rs  world.rs
