[package]
name = "rs-ecs"
description = "reasonably simple entity component system"
version = "0.7.1"
edition = "2018"
rust-version = "1.51"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/adamreichold/rs-ecs"

[dependencies]
rayon = { version = "1.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
erased-serde = { version = "0.3", optional = true }

[features]
serde = ["dep:serde", "dep:erased-serde"]

[dev-dependencies]
serde_json = "1.0"

[profile.bench]
debug = true
lto = true
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
